Manifest-file/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tetris
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tetris
  template:
    metadata:
      labels:
        app: tetris
    spec:
      containers:
      - name: tetris
        image: avian19/tetrisv1:latest
        ports:
        - containerPort: 3000
