Manifest-file/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: tetris-service
spec:
  selector:
    app: tetris
  ports:
  - protocol: TCP
    port: 80                
    targetPort: 3000
  type: LoadBalancer
